Parallax, object manager, pathed palettes, and all paths relative to exe location
Parallax: object depth matters, and causes parallax effects.

Object manager: all of the object defining and cloning that existed
within the game objects has now been pulled into a new object manager
class.

Pathed palettes: palettes can now exist anywhere, and definition files
merely contain file path references like everything else

Relative paths: the engine assumes all paths are relative to its exe's
current location. Likewise, all paths in definitions should be stored
relative to the root homestrife folder

--- a/Homestrife.vcxproj
+++ b/Homestrife.vcxproj
@@ -94,6 +94,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="menu.cpp" />
     <ClCompile Include="menuManager.cpp" />
+    <ClCompile Include="objectManager.cpp" />
     <ClCompile Include="physicsobject.cpp" />
     <ClCompile Include="terrainobject.cpp" />
     <ClCompile Include="texture.cpp" />
@@ -110,6 +111,7 @@
     <ClInclude Include="main.h" />
     <ClInclude Include="menu.h" />
     <ClInclude Include="menuManager.h" />
+    <ClInclude Include="objectManager.h" />
     <ClInclude Include="physicsobject.h" />
     <ClInclude Include="terrainobject.h" />
     <ClInclude Include="texture.h" />
