--- a/Homestrife.vcxproj.filters
+++ b/Homestrife.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="objectManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="renderingManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -102,6 +105,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="objectManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="renderingManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
