--- a/Homestrife.vcxproj
+++ b/Homestrife.vcxproj
@@ -87,6 +87,7 @@
   <ItemGroup>
     <ClCompile Include="audio.cpp" />
     <ClCompile Include="fighter.cpp" />
+    <ClCompile Include="characterSelect.cpp" />
     <ClCompile Include="hsfont.cpp" />
     <ClCompile Include="glextused.cpp" />
     <ClCompile Include="hslog.cpp" />
@@ -105,6 +106,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="audio.h" />
+    <ClInclude Include="characterSelect.h" />
     <ClInclude Include="hsfont.h" />
     <ClInclude Include="hslog.h" />
     <ClInclude Include="fighter.h" />
