--- a/Homestrife.vcxproj.filters
+++ b/Homestrife.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="characterSelect.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="HUDManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
@@ -126,6 +129,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="characterSelect.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="HUDManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
